# detrex

./: .gitignore  pyproject.toml  setup.py
detrex/: __init__.py  _version.py
detrex/config/: config.py
vg/: instructions.md
vg/configs/: dino_r50_4scale_24ep.py  dino_swin_large_224_4scale.py  dino_swin_large_384_5scale.py
