[project]
name = "detrex"
version = "0.5.0"
description = "IDEA open source toolbox for transformer-based instance recognition tasks"
authors = [
    {name = "International Digital Economy Academy"},
]
dependencies = [
    "detectron2 @ git+https://github.com/facebookresearch/detectron2",
    "wandb",
    "scipy",
    "timm",
    "einops",
    "opencv-python",
    "fairscale",
    "omegaconf",
]
requires-python = ">=3.8"
readme = "README.md"
license = {file = "LICENSE"}

[project.optional-dependencies]
tools = [
    "psutil",
    "submitit",
    "hydra-core",
]

[build-system]
requires = ["setuptools>=61", "wheel", "torch>=1.10"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["detrex*", "tools*", "projects*"]
namespaces = true